# ato

./: .bumpversion.cfg  .flake8  .gitignore  .isort.cfg  MANIFEST.in  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.cfg  setup.py  tasks.py  tox.ini
.github/workflows/: pythonpackage.yml
.reuse/: dep5
src/ato/: __init__.py  __main__.py
src/ato/_vendor/: __init__.py  vendor.txt
src/ato/_vendor/packaging/: _typing.py
src/ato/_vendor/toml/: __init__.py  decoder.py  encoder.py  ordered.py
tests/: test_import_ato.py
