# SPDX-FileCopyrightText: David Fritzsche
# SPDX-License-Identifier: CC0-1.0

[build-system]
requires = ["setuptools >= 46.0.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
(
    /\.eggs/
  | /\.git/
  | /\.hg/
  | /\.mypy_cache/
  | /\.tox/
  | /\.venv/
  | /_build/
  | /_version\.py
  | /buck-out/
  | /build/
  | /dist/
  | /_vendor/
)
'''

[tool.coverage.run]
include = [
    'src/*',
    'tests/*',
]
data_file = 'build/coverage-data/coverage'
parallel = true

[tool.vendoring]
destination = "src/ato/_vendor"
requirements = "src/ato/_vendor/vendor.txt"
namespace = "ato._vendor"
protected-files = ["__init__.py", "README.rst", "vendor.txt"]
#patches-dir = "tools/automation/vendoring/patches"
patches-dir = "tools/automation/vendoring/patches"

[tool.vendoring.transformations]
substitute = []
drop = []

[tool.vendoring.typing-stubs]
packaging = []
toml = []

[tool.vendoring.license.directories]

[tool.vendoring.license.fallback-urls]
