# SPDX-FileCopyrightText: David Fritzsche
# SPDX-License-Identifier: CC0-1.0
[metadata]
name = ato
version = 0.0.0
description = Automation Tooling for Python
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0 OR MIT
license_files = LICENSES/Apache-2.0.txt, LICENSES/MIT.txt
maintainer = David Fritzsche
maintainer_email = david.fritzsche@mvua.de
url = https://gitlab.com/dfritzsche/ato
platform = any
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Utilities
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Typing :: Typed

[options]
zip_safe = false
include_package_data = True
packages = find_namespace:
package_dir = =src
python_requires = >=3.6
setup_requires =
    setuptools

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ato = ato:__main__
